<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="50dp"
    tools:context=".ui.pets.PetAddFragment">

    <TextView
        android:gravity="center"
        android:text="@string/petName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:text=""
        android:id="@+id/editTextPetName"
        android:layout_width="192dp"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:text="@string/petAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:text=""
        android:id="@+id/editTextPetAge"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:gravity="center"
        android:text="@string/petType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/petType"
        android:layout_width="192dp"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/anamnesis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:text=""
        android:id="@+id/editTextPetHistory"
        android:layout_width="192dp"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/backToPets_button"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/back"
            android:background="@drawable/round_left_background"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/createPet_button"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/round_right_background"
            android:text="@string/create" />
    </LinearLayout>


</LinearLayout>